Remove unnecessary DCHECK in stream buffer manager

SetUpStreamsAndBuffers may be called twice when enabling blob stream.
For the second call, kPreview stream already exists.
Also reset repeating_request_settings_ in StopPreview.

BUG=chromium:900900
TEST=./capture_unittest --gtest_filter="*VideoCaptureDeviceTests/*"
Pass TakePhoto cases with DCHECK enabled.

Change-Id: Iac89964b95e7d14f592c779f11a92ef46dba930e
Reviewed-on: https://chromium-review.googlesource.com/c/1332974
Reviewed-by: Ricky Liang <jcliang@chromium.org>
Commit-Queue: Heng-ruey Hsu <henryhsu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607943}
Former-commit-id: 678fc40f10bb52e86d53f9f49ce936ecf98162b0